--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "biisal",
-    "description": "A Pyrogram Telegram Ai-Chat-bot,api not required to use 😎. @biisal",
+    "description": "A Pyrogram Telegram Ai-Chat-bot,api not required to use 😎. @raj_dev_01",
     "keywords": [
         "telegram",
         "pyrogram",
