--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     ],
     "repository": "https://github.com",
     "success_url": "/",
-    "logo": "https://i.postimg.cc",
+    "logo": "https://envs.sh/aZ-.jpg",
     "website": "",
     "env": {
         "API_ID": {
